# TinyInfer

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_conv.cpp  bench_kernel.cpp  bench_layer.cpp  bench_mobilenet.cpp  bench_resnet.cpp
demo/: resnet_demo.cpp
demos/: CMakeLists.txt  resnet_demo.cpp
include/: status_code.hpp  tick.hpp
include/data/: load_data.hpp  tensor.hpp
include/kernel/abstract/: attr_kernel.hpp  kernel.hpp  kernel_factory.hpp  no_attr_kernel.hpp
include/layer/abstract/: attr_layer.hpp  layer.hpp  layer_factory.hpp  no_attr_layer.hpp
include/parser/: parse_expr.hpp
include/runtime/: runtime_attr.hpp  runtime_datatype.hpp  runtime_graph.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_operand.hpp  runtime_oprand.hpp  runtime_param.hpp  runtime_parameter.hpp
src/data/: load_data.cpp  tensor.cpp
src/kernel/abstract/: attr_kernel.cpp  kernel.cpp  kernel_factory.cpp
src/kernel/details/: adapt_avgpooling.cpp  adapt_avgpooling.hpp  concat.cpp  concat.hpp  convolution.cpp  convolution.hpp  expression.cpp  expression.hpp  flatten.cpp  flatten.hpp  hardsigmoid.cpp  hardsigmoid.hpp  hardswish.cpp  hardswish.hpp  linear.cpp  linear.hpp  maxpooling.cpp  maxpooling.hpp  platform.hpp  relu.cpp  relu.hpp  sigmoid.cpp  sigmoid.hpp  softmax.cpp  softmax.hpp  sse_mathfun.hpp
src/layer/abstract/: attr_layer.cpp  layer.cpp  layer_factory.cpp
src/layer/details/: adapt_avgpooling.cpp  adapt_avgpooling.hpp  cat.cpp  cat.hpp  convolution.cpp  convolution.hpp  expression.cpp  expression.hpp  flatten.cpp  flatten.hpp  hardsigmoid.cpp  hardsigmoid.hpp  hardswish.cpp  hardswish.hpp  linear.cpp  linear.hpp  maxpooling.cpp  maxpooling.hpp  platform.hpp  relu.cpp  relu.hpp  sigmoid.cpp  sigmoid.hpp  softmax.cpp  softmax.hpp  x86_usability.hpp
src/parser/: parse_expr.cpp
src/runtime/: runtime_attr.cpp  runtime_graph.cpp  runtime_ir.cpp  runtime_op.cpp
test/: CMakeLists.txt  test_main.cpp
test/test_data/: test_load_data.cpp  test_tensor.cpp
test/test_kernel/: test_adaptavgpooling.cpp  test_attr_kernel.cpp  test_concat.cpp  test_conv.cpp  test_expression.cpp  test_flatten.cpp  test_hardsigmoid.cpp  test_hardswish.cpp  test_kernel_factory.cpp  test_linear.cpp  test_maxpooling.cpp  test_relu.cpp  test_sigmoid.cpp  test_softmax.cpp
test/test_layer/: test_adaptavgpooling.cpp  test_attr_layer.cpp  test_cat.cpp  test_conv.cpp  test_expression.cpp  test_flatten.cpp  test_hardsigmoid.cpp  test_hardswish.cpp  test_layer_factory.cpp  test_linear.cpp  test_maxpooling.cpp  test_relu.cpp  test_sigmoid.cpp  test_softmax.cpp
test/test_net/: test_classify_net.cpp
test/test_runtime/: test_attr.cpp  test_param.cpp  test_runtime_graph.cpp  test_runtime_ir.cpp
